--- a/css/contacts.css
+++ b/css/contacts.css
@@ -187,7 +187,7 @@
   padding: 32px 24px;
   height: 100%;
   overflow-y: auto;
-  overflow-x: hidden;
+  
   box-sizing: border-box;
   position: relative;
 }
